done: image loader made

--- a/trial01/my-farm-01/src/index.html
+++ b/trial01/my-farm-01/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>마이농장에 방문하신걸 환영합니다</title>
 
     <base href="/" />
 
